tests/error/comprehension_errors/not_used.err
Guppy compilation failed. Error in file $FILE:13

11:    @guppy(module)
12:    def foo(qs: linst[Qubit]) -> list[int]:
13:        return [42 for q in qs]
                          ^
GuppyTypeError: Variable `q` with linear type `Qubit` is not used
